--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev" 
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "cross-env": "^7.0.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -22,10 +24,11 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
     "tailwindcss": "^3.2.4",
-    "tailwindcss-react-native": "^1.7.10",
-    "react-native-web": "~0.18.9"
+    "tailwindcss-react-native": "^1.7.10"
   },
+  
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
